MDEV-34750 SET GLOBAL innodb_log_file_size is not crash safe

log_t::resize_write_buf(): Revert an inadvertent change that had been
made in commit 4ca355d863e3b6a14439eebbb2958afccb3548e3 (MDEV-33894).
The being-resized ib_logfile101 is supposed to be written from
log_sys.resize_flush_buf or log_sys.resize_buf, not log_sys.buf.